Add load service properties